--- a/css/main.css
+++ b/css/main.css
@@ -277,6 +277,7 @@ body {
 
 .footer_small_content {
   display: none;
+  margin-bottom: 50px;
 }
 
 .small_content_text {
@@ -320,7 +321,7 @@ body {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
   border-radius: 5px;
   width: 136px;
-  height: 58px;
+  height: 68px;
   border: 1px solid #d7d0e2;
   box-sizing: border-box;
   visibility: hidden;
@@ -355,3 +356,5 @@ body {
 .small_nav {
   display: none;
 }
+
+
